[tool.poetry]
name = "lab 6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.0"
Flask = "^2.2.2"
waitress = "^2.1.2"
sqlalchemy = "^1.4.42"
pymysql = "^1.0.2"
alembic = "^1.8.1"
more-itertools = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
